graphics.css
body 
{
	background: #fff;
	padding-top: 50px;
}

header 
{
	background: #1B2426;
	color: #fff;
	height: 48px;
	position: fixed;
	top: 0;
	left: 0;
	transition: top 0.3s ease-in-out;
	width: 100%;
	font-family: Open Sans;
	z-index: 1;
}

.nav-up {
  top: -48px; // same as header height. use variables in LESS/SASS
}

.headerLeft
{
	text-align: left;
	display: inline-block;
}

.headerRight
{
	text-align: right;
	width: calc(100% - 227px);
	padding-right: 3px;
	display: inline-block;
}

.headerMobile
{
	display: none;
	width: 55px;
	height: 48px;
	background: url('menu.png') center center no-repeat;
	text-align: right;
	margin-top: 0px;
	position:relative;
	top: 16px;
	left:calc(100% - 276px);
	padding-right: 3px;
	margin-top: -16px;
}

.closeMenu
{
	width: 55px;
	height: 48px;
	background: url('closeMenu.png') center center no-repeat;
	position: absolute;
	left: calc(100% - 55px + 200px);
	transition: left 0.3s ease-in-out;
	top: -7px;
}

.headerMobile .mobileMenu
{
	position: fixed;
	transition: left 0.3s ease-in-out;
	width: 200px;
	height: 100vh;
	top:0px;
	left: 100%;
	background: #1B2426;
	text-align: left;
}

.headerMobile .mobileMenu div
{
	padding: 15px;
	padding-bottom: 25px;
	margin-top: -20px;
}

.headerMobile .mobileMenu a
{
	color: inherit;
	text-decoration: none;
}

#cover
{
	position: fixed;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100vh;
	background: #000;
}

.hidden 
{
	visibility: hidden;
	opacity: 0;
	transition: visibility 0s .3s, opacity .3s ease-in-out;
}

.visible 
{
	visibility: visible;
	opacity: .7;
	transition: opacity 0.3s ease-in-out;
}

.headerLeft button
{
	font-weight: 600;
}

.headerRight button
{
	font-weight: 100;
}

button
{
	font-size: 20px;
	font-family: Open Sans;
	margin-top: 7px;
	margin-bottom: 20px;
	background: none;
	border:none;
	color: #fff;
	outline: none;
    position:relative;
    cursor: pointer;
}

.current
{
	color: yellow;
}

button.animate::before
{
	content: "";
	position: absolute;
	width: calc(100% - 14px);
	height: 2px;
	bottom: 2px;
	left: 7px;
	background: #fff;
	visibility: hidden;
	transform: scaleX(0);
	transition: .2s linear;
	display: block;
}

button.current::before
{
	content: "";
	position: absolute;
	width: calc(100% - 14px);
	height: 2px;
	bottom: 2px;
	left: 7px;
	background: yellow;
	transform: scaleX(1);
	transition: .25s linear;
	display: block;
}

button:hover::before
{
	visibility: visible;
	transform: scaleX(1);
}

.headerLeft img
{
	margin-top: 8px;
	margin-left: 8px;
	margin-bottom: -9px;
	margin-right: 5px;
}

#title
{
	font-size: 35px;
	font-family: Open Sans;
	margin-top: 10px;
	margin-bottom: 20px;
}

#title img
{
	margin-bottom: -19px; margin-right: 15px;
}

.content
{
	width: 1100px;
}

.content, .gradient, .code
{
	text-align: left;
	font-family: -apple-system, system-ui, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif;
	line-height: 1.5;
	-ms-text-size-adjust: 100%;
	-webkit-text-size-adjust: 100%;
	color: #1b2426;
}

a
{
	color: #0275d8;
	text-decoration: none;
}

a:focus, a:hover
{
	color: #014c8c;
	text-decoration: underline;
}

em
{
	opacity: .7;
}

h3
{
	font-size: 25px;
	font-family: Open Sans;
	margin: 0;
	margin-bottom: -15px;
	font-weight: 100;
}

.centered
{
	text-align: center;
}

video
{
	width: 700px;
	height: 393px;
}

ul
{
	margin-top: -12px;
	margin-bottom: 3px;
}

ul ul
{
	margin-top: 0px;
	margin-bottom: 0px;
}

strong
{
	font-weight: 600;
}

.gradient
{
	background: #1B2426; /* For browsers that do not support gradients */
	background: -webkit-radial-gradient(circle, #1B2426 50%, #3A4D52 100%, #3A4D52); /* Safari */
	background: -o-radial-gradient(circle, #1B2426 50%, #3A4D52 100%, #3A4D52); /* Opera 11.6 to 12.0 */
	background: -moz-radial-gradient(circle, #1B2426 50%, #3A4D52 100%, #3A4D52); /* Firefox 3.6 to 15 */
	background: radial-gradient(circle, #1B2426 50%, #3A4D52 100%, #3A4D52); /* Standard syntax */
	color: #fff;
	position: relative;
	top: 8px;
	left: -8px;
	padding-top: 30px;
	padding-bottom: 28px;
	width: calc(1100px);
	padding-left: calc(50% - 542px);
	padding-right: calc(50% - 542px);
}

.gradient:not(footer) h3
{
	font-size: 33px;
}

div.gradient
{
	margin-bottom: 30px;
}

footer
{
	margin-top: 50px;
	margin-bottom: -30px;
}

.footerContainer
{
	column-count: 2;
	width: 600px;
	text-align: left;
	margin-left: calc(50% - 300px);
}

footer a
{
	color: inherit;
	text-decoration: none;
}

footer a:hover, a:focus
{
	text-decoration: underline;
	color: inherit;
}

footer h3
{
	margin-bottom: 0px;
	font-size: 30px;
	color: #6C8F91;
}

footer div
{
	margin-top: 5px;
}

.developedBy
{
	color: #6C8F91;
	text-align: center;
	font-size: 15px;
	margin: 30px;
}

.developedBy a
{
	color: #fff;
}

.developedBy a:hover
{
	color: #fff;
}

.code
{
	position: relative;
	top: 8px;
	left: -8px;
	width: calc(1100px);
	padding-left: calc(50% - 542px);
	padding-right: calc(50% - 542px);
	background: rgb(43, 43, 43);
	font-size: 1.1em;
	padding-bottom: 10px;
	margin-bottom: 30px;
	overflow-x: auto;
}

pre, code
{
	padding: 0;
	margin: 0;
	font-family: monospace;
	font-size: 1em;
}

.right
{
	text-align: right;
}

table
{
	width: 100%;
}

.disabled
{
	color: #606060;
}

.disabled:hover, .disabled:focus, .disabled:active
{
	color: #3F3F3F;
}

@media only screen and (max-width: 1200px) 
{
	.content
	{
		width: 930px;
	}

	.gradient, .code
	{
		width: calc(930px);
		padding-left: calc(50% - 457px);
		padding-right: calc(50% - 457px);
	}
}

@media only screen and (max-width: 990px) 
{
	.content
	{
		width: 670px;
	}

	.code, .gradient
	{
		width: calc(670px);
		padding-left: calc(50% - 327px);
		padding-right: calc(50% - 327px);
	}

	.gradient
	{
		background: -webkit-radial-gradient(circle 150vw, #1B2426, #3A4D52); /* Safari */
		background: -o-radial-gradient(circle 150vw, #1B2426, #3A4D52); /* Opera 11.6 to 12.0 */
		background: -moz-radial-gradient(circle 150vw, #1B2426, #3A4D52); /* Firefox 3.6 to 15 */
		background: radial-gradient(circle 150vw, #1B2426, #3A4D52); /* Standard syntax */
	}

	.headerRight
	{
		display: none;
	}

	.headerMobile
	{
		display: inline-block;
	}
}

@media only screen and (max-width: 770px) 
{
	.content
	{
		width: 520px;
	}

	.code, .gradient
	{
		width: calc(520px);
		padding-left: calc(50% - 252px);
		padding-right: calc(50% - 252px);
	}

	video
	{
		width: 520px;
		height: 292px;
	}

	.footerContainer
	{
		width: calc(100% - 20px);
		margin-left: 0px;
		padding-left: 20px;
		column-count: 1;
	}

	.footerContainer h3
	{
		margin-top: 30px;
	}
}

@media only screen and (max-width: 575px) 
{
	.content
	{
		width: 100%;
	}

	.code, .gradient
	{
		width: 100%;
		padding-left: 8px;
		padding-right: 8px;
	}

	video
	{
		width: 100%;
		height: calc(100vw / 16 * 9);
	}
}

